[REFACTOR]AnythingLLM chat